@@ -1,3 +1,12 @@
+2001-06-12  Scott S. Goodwin  <scott@scottg.net>
+
+	* all: changed #ifdef AS3 to #ifndef NS_MAJOR_VERSION. This means
+	it now compiles for AOLserver 3.x by default, since
+	NS_MAJOR_VERSION doesn't even exist in 4.x yet.
+
+	* nsopenssl.h: Added code to define the OpenSSL library in use by
+	pulling the OPENSSL_VERSION_NUMBER from the source.
+
 2001-06-08  Scott S. Goodwin  <scott@scottg.net>
 
 	* init.c: added SSL_CTX_set_session_id_context call and
